# ai-demos

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
demos/: architecture_diagram.md
demos/001_sql_logs/: LLM_INTEGRATION_GUIDE.md  README.md  RESULTS.md  anomaly_detector.py  llm_examples.py  llm_processor.py  llm_prompt.txt  logfile_generator.py  sql_log_generator_study.ipynb
demos/002_azure/: README.md  analyze_azure_costs.py  azure_data.py  generate_llm_summary.py  simple_data.py
demos/003_iam_recommendation/: README.md  anomaly_detection.py  generate_access_request.py  validate_access_requests.py
demos/004_sql_dmv/: ERROR_LOG_GENERATOR.md  EXAMPLE_CLAUDE_ANALYSIS.md  QUICKSTART.md  README.md  analyze_real_dmv.py  dmv_summary_for_llm.json  generate_synthetic_dmv.py  parse_dmv_for_llm.py
demos/004_sql_dmv/synthetic_dmv_generator/: __init__.py  config.py
demos/004_sql_dmv/synthetic_dmv_generator/analyzers/: __init__.py  dmv_parser.py  statistical_analyzer.py
demos/004_sql_dmv/synthetic_dmv_generator/exporters/: __init__.py  csv_exporter.py  errorlog_exporter.py  text_exporter.py
demos/004_sql_dmv/synthetic_dmv_generator/generators/: __init__.py  base_generator.py  errorlog_generator.py  synthetic_generator.py  workload_patterns.py
demos/004_sql_dmv/synthetic_dmv_generator/models/: __init__.py  base.py  errorlog.py  intervals.py  plan.py  query.py  query_text.py  runtime_stats.py  wait_stats.py
demos/004_sql_dmv/synthetic_dmv_generator/utils/: __init__.py  correlations.py  distributions.py  validators.py
tests/: __init__.py  test_azure_data.py  test_generate_access_request.py  test_logfile_generator.py  test_sql_dmv.py
