[project]
name = "ai-demos"
version = "0.1.0"
description = "A package of synthetic data generation and analysis GenAI demos."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faker==37.12.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "jupyter",
    "matplotlib",
    "matplotlib-inline",
    "seaborn"
]

[tool.uv]
# Default to exact version bounds when adding dependencies
add-bounds = "exact"

[tool.ruff]
line-length = 120
